--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@sanity/client": "^7.5.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.92.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "liquid-glass-react": "^1.1.1",
+    "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "next-sanity": "^9.12.0",
     "react": "^19.0.0",
@@ -22,7 +26,9 @@
     "react-markdown": "^10.1.0",
     "react-p5": "^1.4.1",
     "sanity": "^3.92.0",
-    "styled-components": "^6.1.19"
+    "shadcn": "^2.6.4",
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,7 +42,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
   "lint-staged": {
