--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/vision": "^3.92.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.0",
     "gsap": "^3.13.0",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.516.0",
@@ -25,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-p5": "^1.4.1",
+    "recharts": "^2.12.7",
     "sanity": "^3.92.0",
     "shadcn": "^2.6.4",
     "styled-components": "^6.1.19",
@@ -43,6 +45,7 @@
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.10",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
